<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccolyzeActivity" >

    <ImageButton
        android:id="@+id/buttonInfo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/info"
        android:state_enabled="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/buttonCollect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginRight="20dp" 
            android:text="@string/collect_label" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" >

            <TextView
                android:id="@+id/sampleview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/sample_label"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/samplepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sampleview"
                android:background="#e0e0e0"
                android:value="10" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" >

            <TextView
                android:id="@+id/startdistanceview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/startdistance_label"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/startdistancepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/startdistanceview"
                android:background="#e0e0e0"
                android:value="1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/axisview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/axis_label"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/axispicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/axisview"
                android:background="#e0e0e0"
                android:value="3" />
        </RelativeLayout>

        <Button
            android:id="@+id/buttonAnalyze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="20dp" 
            android:text="@string/analyze_label" />
    </LinearLayout>

</RelativeLayout>